@@ -141,6 +141,8 @@ cupt (2.6.0~) UNRELEASED; urgency=low
       - Adjusted version normalized score calculation that a version from
         non-default release has a positive score, and thus removing it gets,
         by default, a penalty, not a bonus.
+    - range:
+      - New module.
   * downloadmethods:
     - debdelta:
       - Pass delta size (when/if known) to download progress.
